--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Breanna</h2>
+    <h2>Breanna Wentz</h2>
+
+    <div>
+    <h5> About Me </h5>
+    <h5>skills</h5>
+    
+    <section>
+    <h5>projects</h5>
+    <p>The Recipe box</p> 
+    <p> It is a place where you can easily access all of your favorite recipes instead of having to search through stacks of pieces of paper in different spots just to find the one you are looking for</p>
+    <a>Demo href="https://vimeo.com/738769295/c3cfe8a7ab"</a>
+</section>
+    <section>
+        <h5>Contact</h5>
+    </section>
+
+
+    </div>
 </body>
 </html>
